default/objects/Relationship_Map__c/Relationship_Map__c.object-meta.xml
<CustomObject>
    <label>Relationship Map</label>
    <nameField>
        <label>Relationship Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>