default/objects/Relationship_Map__c/fields/Map_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Map_Member_Count__c</fullName>
    <label>Map_Member_Count</label>
    <summaryForeignKey>Relationship_Map_Member__c.Relationship_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>