default/objects/Relationship_Map__c/fields/Map_Member_Max_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Map_Member_Max_Modified_Date__c</fullName>
    <description>Latest modified date of related map members, used for scoring of account plans if there is a related plan</description>
    <label>Map Member Max Modified Date</label>
    <summarizedField>Relationship_Map_Member__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Relationship_Map_Member__c.Relationship_Map__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>