default/objects/Relationship_Map__c/fields/pq_AccountPlanId__c.field-meta.xml
<CustomField>
    <fullName>pq_AccountPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pq_AccountPlanId</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Relationship Maps</relationshipLabel>
    <relationshipName>Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>