default/objects/Relationship_Map__c/fields/pq_Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>pq_Opportunity_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An optional relationship to an Opportunity Plan record</description>
    <label>Opportunity Plan</label>
    <referenceTo>PQ_Opportunity_Plan__c</referenceTo>
    <relationshipLabel>Relationship Maps</relationshipLabel>
    <relationshipName>Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>