default/objects/Relationship_Map__c/fields/Type_Setting__c.field-meta.xml
<CustomField>
    <fullName>Type_Setting__c</fullName>
    <description>The setting for which this map uses</description>
    <inlineHelpText>The setting for which this map uses</inlineHelpText>
    <label>Type Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>